
syntax = "proto3";

package proto;

message Error {
    uint32 code = 1;
    string message = 2;
}

enum MethodType {
    
    CONNECT = 0;
    SUBSCRIBE = 1;
    UNSUBSCRIBE = 2;
    PUBLISH = 3;
    PRESENCE = 4;
    PRESENCE_STATS = 5;
    HISTORY = 6;
    PING = 7;
    SEND = 8;
    RPC = 9;
    REFRESH = 10;
    SUB_REFRESH = 11;
}

message Command {
    uint32 id = 1;
    MethodType method = 2;
    bytes params = 3;
}

message Reply {
    uint32 id = 1;
    Error error = 2;
    bytes result = 3;
}

enum PushType {
    
    PUBLICATION = 0;
    JOIN = 1;
    LEAVE = 2;
    UNSUB = 3;
    MESSAGE = 4;
}

message Push {
    PushType type = 1;
    string channel = 2;
    bytes data = 3;
}

message ClientInfo {
    string user = 1;
    string client = 2;
    bytes conn_info = 3;
    bytes chan_info = 4;
}

message Publication {
    string uid = 1;
    bytes data = 2;
    ClientInfo info = 3;
}

message Join {
    ClientInfo info = 1;
}

message Leave {
    ClientInfo info = 1;
}

message Unsub {
    bool resubscribe =1;
}

message Message {
    bytes data = 1;
}

message ConnectRequest {
    string token = 1;
    bytes data = 2;
}

message ConnectResult {
    string client = 1;
    string version = 2;
    bool expires = 3;
    bool expired = 4;
    uint32 ttl = 5;
    bytes data = 6;
}

message RefreshRequest {
    string token = 1;
}

message RefreshResult {
    string client = 1;
    string version = 2;
    bool expires = 3;
    bool expired = 4;
    uint32 ttl = 5;
}

message SubscribeRequest {
    string channel = 1;
    bool recover = 2;
    string last = 3;
    uint32 away = 4;
    string token = 5 ;
}

message SubscribeResult {
    string last = 1;
    bool recovered = 2;
    repeated Publication publications = 3;
    bool expires = 4;
    bool expired = 5;
    uint32 ttl = 6;
}

message SubRefreshRequest {
    string channel = 1;
    string token = 2;
}

message SubRefreshResult {
    bool expires = 1;
    bool expired = 2;
    uint32 ttl = 3;
}

message UnsubscribeRequest {
    string channel = 1;
}

message UnsubscribeResult {}

message PublishRequest {
    string channel = 1;
    bytes data = 2;
}

message PublishResult {}

message PresenceRequest {
    string channel = 1;
}

message PresenceResult {
    map<string, ClientInfo> presence = 1;
}

message PresenceStatsRequest {
    string channel = 1;
}

message PresenceStatsResult {
    uint32 num_clients = 1;
    uint32 num_users = 2;
}

message HistoryRequest {
    string channel = 1;
}

message HistoryResult {
    repeated Publication publications = 1;
}

message PingRequest {
    string data = 1;
}

message PingResult {
    string data = 1;
}

message RPCRequest{
    bytes data = 1;
}

message RPCResult {
    bytes data = 1 ;
}

message SendRequest{
    bytes data = 1;
}
